force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>