force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Headless__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Headless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set then the section will be rendered with no header and it will seem as if the section is part of the prior section.</description>
    <label>Headless</label>
    <type>Checkbox</type>
</CustomField>