force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Section_Resource__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Section_Resource__c</fullName>
    <label>Section Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>ConfiguredSObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>MappedSObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>MappedSObjectHierarchyScreenResource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>