force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__sObject_Type__c</fullName>
    <label>sObject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>